packages/compiler/tests/snapshots/sfc_split__split_extra_whitespace.snap
---
source: tests/sfc_split.rs
expression: result
---
ScribeSource {
    script: Some(
        "const y = 2",
    ),
    template: Some(
        "<p>text</p>",
    ),
    style: None,
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
    route: None,
}
