packages/compiler/tests/snapshots/sfc_split__split_missing_script.snap
---
source: tests/sfc_split.rs
assertion_line: 21
expression: result
---
ScribeSource {
    script: None,
    template: Some(
        "<span>hello</span>",
    ),
    style: None,
    meta: ScriptMeta {
        name: None,
    },
    contract: None,
}
