packages/compiler/tests/snapshots/sfc_split__split_missing_template.snap
---
source: tests/sfc_split.rs
expression: result
---
AihuSource {
    script: Some(
        "const x = 1",
    ),
    template: None,
    style: None,
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
    route: None,
    stream: None,
}
