packages/compiler/tests/snapshots/sfc_split__split_style_only.snap
---
source: tests/sfc_split.rs
assertion_line: 35
expression: result
---
ScribeSource {
    script: None,
    template: None,
    style: Some(
        StyleBlock {
            content: "body { margin: 0; }",
            scope: Scoped,
        },
    ),
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
}
