packages/compiler/tests/snapshots/sfc_split__split_valid_full.snap
---
source: tests/sfc_split.rs
assertion_line: 17
expression: result
---
AihuSource {
    script: Some(
        "import { signal } from '@aihu/signals'\n\nconst [count, setCount] = signal(0)",
    ),
    template: Some(
        "<div>{{ count }}</div>",
    ),
    style: Some(
        StyleBlock {
            content: "div { color: red; }",
            scope: Scoped,
        },
    ),
    meta: ScriptMeta {
        name: None,
    },
    agent: None,
    route: None,
}
